version/0.13/_sources/api/solver/_autosummary/settings/charge.rst.txt
:orphan:

.. _charge:

charge
======

.. autoclass:: ansys.fluent.core.solver.settings_231.charge.charge

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

================================   =================================

Parent                                                       Summary

================================   =================================
:ref:`fluid_child <fluid_child>`       'child_object_type' of fluid.

================================   =================================

